# boofi

./: Cargo.toml
boofi/: Cargo.toml  README.md
boofi/resources/test/: cpuinfo  crontab  crypto  filesystems  fstab  hostname  hosts  loadavg  ls  ls_la  mdstat  meminfo  mounts  os-release_opensuse  os-release_ubuntu  partitions  passwd  shadow  swaps  uname_all  uptime  version
boofi/src/: controller.rs  description.rs  error.rs  main.rs  rest.rs  task.rs  utils.rs
boofi/src/apps/: ls.rs  mod.rs  sh.rs  touch.rs  uname.rs  wget.rs
boofi/src/files/: json.rs  mod.rs  text.rs  yaml.rs
boofi/src/files/etc/: crontab.rs  fstab.rs  hostname.rs  hosts.rs  mod.rs  os_release.rs  passwd.rs
boofi/src/files/proc/: cpuinfo.rs  crypto.rs  filesystems.rs  loadavg.rs  mdstat.rs  meminfo.rs  mod.rs  mounts.rs  partitions.rs  swaps.rs  uptime.rs  version.rs
boofi/src/system/: mod.rs  os.rs  posix.rs
boofi_macros/: Cargo.toml
boofi_macros/src/: lib.rs
